--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
 	name = Michael
-	email = 80940180+michael-freling@users.noreply.github
+	email = 80940180+michael-freling@users.noreply.github.com
 [init]
 	defaultBranch = main
