--- a/.gitconfig
+++ b/.gitconfig
@@ -3,3 +3,5 @@
 	email = 80940180+michael-freling@users.noreply.github.com
 [init]
 	defaultBranch = main
+[credential "https://github.com"]
+	helper = !/usr/bin/gh auth git-credential
